<resources>
    <string name="app_name">SmO2</string>
    <string name="channel_name">FatMaxxer1</string>
    <string name="channel_description">FatMaxxer notification channel 1</string>
    <string name="alpha1">⍺1</string>
    <string name="RootMeanSquareSuccessiveDifferencesAbbreviation">RMSSD</string>
    <string name="undefinedTimeString">--:--:--</string>
    <string name="ScreenshotSavedIn">\"Screenshot saved in \"</string>
    <string name="SelectFilesForExport">Select files for export</string>
    <string name="KeepingCurrentLogFiles">Retaining current log files at user request</string>
    <string name="UseMenuQuitToExit"><![CDATA[Use Menu > Quit to exit]]></string>
    <string name="FatMaxxerBoundToService">FatMaxxer bound to service</string>
    <string name="RenameTo">Rename to</string>
    <string name="Deleted">Deleted</string>
    <string name="DeletingOnExit">Deleting (on exit)</string>
    <string name="NotRRLogNotImporting">Not RR log, not importing</string>
    <string name="ImportedRRFile">Imported RR file</string>
    <string name="FinishedReplay">Finished replay</string>
    <string name="WarningExpectedHeader">warning, expected header</string>
    <string name="Got">got</string>
    <string name="WarningExpectedEmptyLineGot">warning, expected empty line, got</string>
    <string name="StartedRRFileReplay">Started RR file replay</string>
    <string name="ConnectedToDevice">Connected to sensor</string>
    <string name="FatMaxxerAppClosed">FatMaxxer closed</string>
    <string name="SearchingForPolarHRDevices">Searching for Polar sensors</string>
    <string name="Discovered">Discovered sensor</string>
    <string name="ConnectingToHeartRateSensor">Connecting to sensor</string>
    <string name="DisconnectedFromHeartRateSensor">Disconnected from sensor</string>
    <string name="TryingToConnectToHeartRateSensor">Trying to connect to sensor</string>
    <string name="BeforeNewConnectOrReplay">before new connect/replay</string>
    <string name="Quit">Quit</string>
    <string name="ReplayRRIntervalsLog">Replay RR Log</string>
    <string name="ImportAndReplayRRIntervalsLog">Import+Replay RR Log</string>
    <string name="RenameCurrentLogFiles">Rename Current Logs</string>
    <string name="ExportSelectedLogs">Export Selected Logs</string>
    <string name="DeleteSelectedLogs">Delete Selected Logs</string>
    <string name="DeleteAllOldLogs">Delete All Old Logs</string>
    <string name="DeleteAllDebugLogs">Delete All Debug Logs</string>
    <string name="DeleteAllLogs">Delete All Logs</string>
    <string name="ConnectedPreferredDevice">Connect preferred device</string>
    <string name="Connect">Connect</string>
    <string name="SearchForPolarDevices">Search for Polar devices</string>
    <string name="ImportCSVFile">Import CSV</string>
    <string name="ExportLogFilesTo">Export log files to</string>
    <string name="RenameLogFiles">Rename</string>
    <string name="TagToUseForCurrentLogFileNames">Tag to include in current log names</string>
    <string name="OK">OK</string>
    <string name="Cancel">Cancel</string>
    <string name="ProblemWithImportedFile">Problem with imported file</string>
    <string name="ProblemImportingRRLog">Problem importing RR log</string>
    <string name="SelectRRFileForTestInput">Select RR file for test input</string>
    <string name="SelectFilesForDeletion">Select files for deletion</string>
    <string name="QuitOrRestartRequiredAfterConnectOrReplay">Quit/restart required after connect/replay</string>
    <string name="Alpha1">Alpha1</string>
    <string name="TwoMinutesAbbrev">2min</string>
    <string name="HeartRateAbbrev">HR</string>
    <string name="Artifacts">Artifacts</string>
    <string name="RRIntervalAbbrev">RR</string>
    <string name="Workout">Workout</string>
    <string name="Drop">dr</string>
    <string name="BatteryAbbrev">batt</string>
    <string name="RootMeanSquareSuccessiveDifferencesAbbrevLowerCase">rmssd</string>
    <string name="Alpha1AbbrevNonUnicode">a1</string>
    <string name="Dropped_TextToSpeech">dropped</string>
    <string name="Percent_TextToSpeech">percent</string>
    <string name="AlphaOne_TextToSpeech">Alpha one</string>
    <string name="HeartRate_TextToSpeech">heart rate</string>
    <string name="HeartRateFull_TextToSpeech">Heart rate</string>
    <string name="HeartRateVariabilityAbbrev_TextToSpeech">HRV</string>
    <string name="HeartRate_TextToSpeechFull">heart rate</string>
    <string name="ArtifactsSamplesThreshold_UI">artifacts / samples (%) [threshold]</string>
    <string name="Light">Light</string>
    <string name="RootMeanSquareSuccessiveDifferencesAbbrev">RMSSD</string>
    <string name="EnableAudioUpdates">Audio updates</string>
    <string name="Alpha1UpdatesViaAudio">⍺1 updates via audio</string>
    <string name="EnableNotificationUpdates">Enable notification updates</string>
    <string name="Alpha1UpdatesViaOngoingNotification">⍺1 updates via ongoing notification</string>
    <string name="NotificationDetail">Notification detail</string>
    <string name="KeepScreenOn">Keep screen on</string>
    <string name="KeepLogs">Keep logs</string>
    <string name="PreserveThisActivitysLogsOnExit">Preserve this activity\'s logs on exit</string>
    <string name="ArtifactRejectionThreshold">Artifact rejection threshold</string>
    <string name="RRsDifferingByMoreThanPlusMinusThresholdFromThePreviousAreRejected">RRs differing by more than +/- threshold from the previous are rejected.</string>
    <string name="Alpha1InterCalculationPeriodSeconds">⍺1 inter-calculation period (sec)</string>
    <string name="TimeInSecondsToWaitBetweenAlpha1CalculationsGreaterThanOrEqualToFiveSeconds"><![CDATA[Time in seconds to wait between Alpha1 calculations, >= 5 sec]]></string>
    <string name="SelectGraphFeatures">Select graph features</string>
    <string name="PreferredDeviceIDHex">Preferred device ID (hex; restart required)</string>
    <string name="HexidecimalStringEightCharactersAutoSetToFirstConnectedDevice">Hexadecimal string, 8 characters. Auto-set to first connected device.</string>
    <string name="DeveloperMode">Developer mode</string>
    <string name="ExperimentalFeatures">Experimental features (replay / disable auto-start)</string>
    <string name="SelectReplayGraphFeatures">Select replay graph features</string>
    <string name="LambdaInteger">Lambda (integer)</string>
    <string name="ValueOfLambdaForSmoothnessPriors">Value of Lambda for smoothness priors pre-DFA detrending</string>
    <string name="ImportCSVFailedDataIsNull">Import CSV failed: data is null</string>
    <string name="ImportCSVFailedCouldNotGetURIFromData">Import CSV failed: could not get Uri from data</string>
    <string name="AudioOutputOnZoneChange">Audio output only on zone change</string>
</resources>
