<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreferenceCompat
        android:key="audioOutputEnabled"
        android:title="@string/EnableAudioUpdates"
        android:summary="@string/Alpha1UpdatesViaAudio"/>

    <SwitchPreferenceCompat
        android:key="notificationsEnabled"
        android:title="@string/EnableNotificationUpdates"
        android:summary="@string/Alpha1UpdatesViaOngoingNotification"/>

    <ListPreference
        android:key="notificationDetail"
        android:title="@string/NotificationDetail"
        android:summary=""
        android:defaultValue="full"
        android:entries="@array/notificationDetailEntries"
        app:useSimpleSummaryProvider="true"
        android:entryValues="@array/notificationDetailValues"/>

    <SwitchPreferenceCompat
        android:key="keepScreenOn"
        android:title="@string/KeepScreenOn"
        android:summary=""/>

    <SwitchPreferenceCompat
        android:key="removeArtifacts"
        android:title="Remove Artifacts"
        android:defaultValue="true"
        android:summary="RR intervals deemed to be artifacts will be ignored"/>

    <ListPreference
        android:key="artifactThreshold"
        android:title="@string/ArtifactRejectionThreshold"
        android:summary="@string/RRsDifferingByMoreThanPlusMinusThresholdFromThePreviousAreRejected"
        android:defaultValue="Auto"
        android:entries="@array/artifactThresholdEntries"
        app:useSimpleSummaryProvider="true"
        android:entryValues="@array/artifactThresholdEntryValues"/>

    <EditTextPreference
        android:key="alpha1CalcPeriod"
        android:title="@string/Alpha1InterCalculationPeriodSeconds"
        android:digits="0123456789"
        android:maxLength="4"
        android:defaultValue="20"
        app:useSimpleSummaryProvider="true"
        android:summary="@string/TimeInSecondsToWaitBetweenAlpha1CalculationsGreaterThanOrEqualToFiveSeconds"/>

    <MultiSelectListPreference
        app:dialogTitle="@string/SelectGraphFeatures"
        android:key="graphFeaturesSelectorKey"
        android:summary=""
        android:title="@string/SelectGraphFeatures"
        android:entries="@array/graphFeaturesEntries"
        android:entryValues="@array/graphFeaturesValues"
        android:defaultValue="@array/graphFeaturesDefaultValues" />

    <EditTextPreference
        android:key="polarDeviceID"
        android:title="@string/PreferredDeviceIDHex"
        app:useSimpleSummaryProvider="true"
        android:summary="@string/HexidecimalStringEightCharactersAutoSetToFirstConnectedDevice"/>

    <SwitchPreferenceCompat
        android:key="enableECG"
        android:title="Enable ECG artifact logging"
        android:defaultValue="true"
        android:summary="Enable ECG logging for artifacts"/>

    <SwitchPreferenceCompat
        android:key="enableReplay"
        android:title="Enable Log Replay"
        android:summary="Enable log replay (disable auto-start)"/>

    <SwitchPreferenceCompat
        android:key="enableSensorEmulation"
        android:title="Enable BLE Sensor Emulation"
        android:summary="Try to emulate a BLE sensor transmitting a1 (requires restart)"/>

    <MultiSelectListPreference
        app:dialogTitle="@string/SelectReplayGraphFeatures"
        android:key="graphReplayFeaturesSelectorKey"
        android:summary=""
        android:title="@string/SelectReplayGraphFeatures"
        android:entries="@array/graphFeaturesEntries"
        android:entryValues="@array/graphFeaturesValues"
        android:defaultValue="@array/graphReplayFeaturesDefaultValues" />

    <EditTextPreference
        android:key="lambdaPref"
        android:title="@string/LambdaInteger"
        android:summary="@string/ValueOfLambdaForSmoothnessPriors"
        android:digits="0123456789"
        android:defaultValue="500"
        app:useSimpleSummaryProvider="true"
        android:maxLength="3" />

    <SwitchPreferenceCompat
        android:key="audioOutputOnZoneChane"
        android:title="@string/AudioOutputOnZoneChange"
        android:summary="Audio output only on zone change"/>

</PreferenceScreen>
